# hummingbot-factor-mm

./: .gitignore  README.md  pyproject.toml
conf/controllers/: factor_mm_btc.yml.example
conf/scripts/: factor_mm.yml
controllers/market_making/: exchange_health.py  exchange_time.py  factor_math.py  factor_mm_btc_perp.py  health.py  metrics_sink.py  processed_data.py
dashboard/: app.py  queries.py
deploy/: NOTES.md  _inspect_position_api.py  _probe_account_positions.py  _recovery.sh  bootstrap_vps.sh  daily-status.sh  factor-dashboard.service  hummingbot.service  pull_and_restart.sh  run-hummingbot.sh
docs/superpowers/plans/: 2026-06-19-factor-mm-binance-perp.md
docs/superpowers/specs/: 2026-06-19-factor-mm-binance-perp-design.md
tests/: conftest.py  test_exchange_health.py  test_exchange_time.py  test_factor_math.py  test_health.py  test_metrics_sink.py  test_processed_data.py  test_queries.py
