[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-mm"
version = "0.1.0"
description = "Factor-driven market making controller for Hummingbot v2 on Binance USDT-M perpetuals"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "pandas>=2",
  "streamlit>=1.30",
  "plotly>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["controllers", "controllers.market_making", "dashboard"]
